// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Consumable",
      "cost": 1,
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "health": 0,
      "id": "mock-id",
      "isPlayed": false,
      "money": 0,
      "name": "Apple",
    },
    Object {
      "category": "Consumable",
      "cost": 2,
      "description": "Heal 2, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "kind": "Basic",
          "value": 2,
        },
        Object {
          "category": "Trash Self",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "health": 0,
      "id": "mock-id-2",
      "isPlayed": false,
      "money": 0,
      "name": "Bread",
    },
  ],
}
`;

exports[`creates a Card 1`] = `
Object {
  "category": "Consumable",
  "cost": 1,
  "description": "Heal 1, Trash this card",
  "effects": Array [
    Object {
      "category": "Heal",
      "kind": "Basic",
      "value": 1,
    },
    Object {
      "category": "Trash Self",
      "kind": "Basic",
      "value": 0,
    },
  ],
  "health": 0,
  "id": "mock-id",
  "isPlayed": false,
  "money": 0,
  "name": "Apple",
}
`;

exports[`creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Consumable",
      "cost": 1,
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "health": 0,
      "id": "mock-id",
      "isPlayed": false,
      "money": 0,
      "name": "Apple",
    },
  ],
}
`;

exports[`removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
